# dscookie

./: LICENCE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  Dockerfile  Makefile  pyproject.toml
{{ cookiecutter.project_slug }}/notebooks/: example.ipynb
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.module_name }}/: __init__.py
